--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ header{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    overflow: hidden !important;
 }
 
 img{
