--- a/viewports.css
+++ b/viewports.css
@@ -1,13 +1,25 @@
 /*safari 7.1*/
 _::-webkit-full-page-media, _:future, :root .safari_only {
-    .container{background-image:url('images/backdrop2.jpg');}
+    .container{background-image:url('images/backdrop2.jpg');
+    background-attachment: fixed;
+    background-position: auto;
+    background-repeat: repeat;
+    background-size: auto;
+    
+    
+    }
 }
 
 /*safari 6.1-10*/
 @media screen and (min-color-index:0) and(-webkit-min-device-pixel-ratio:0) { 
     @media {
         .safari6 { 
-.container{background-image:url('images/backdrop2.jpg');}
+.container{background-image:url('images/backdrop2.jpg');
+    background-attachment: fixed;
+    background-position: auto;
+    background-repeat: repeat;
+    background-size: auto;
+            }
         }
     }
 }
@@ -15,7 +27,12 @@ _::-webkit-full-page-media, _:future, :root .safari_only {
 @media not all and (min-resolution:.001dpcm) { 
     @media {
         .safari10 { 
-.container{background-image:url('images/backdrop2.jpg');}
+.container{background-image:url('images/backdrop2.jpg');
+    background-attachment: fixed;
+    background-position: auto;
+    background-repeat: repeat;
+    background-size: auto;
+            }
         }
     }
 }
