--- a/style.css
+++ b/style.css
@@ -26,8 +26,12 @@ header{
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-    overflow: hidden !important;
+
+   
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 img{
