--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ header{
 .container{
     width:100%;
     background-image:url('images/backdrop.jpg');
-    background-attachment: fixed;
-    
+    background-attachment: scroll;
+    background-position:center;
     background-repeat: no-repeat;
 
    
