--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ header{
     background-attachment: scroll;
     background-position:center;
     background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 
    
 
