--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ header{
     -o-background-size: cover;
     background-size: cover;
 
+      filter: blur(8px);
+  -webkit-filter: blur(8px);
    
 
 }
