--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header{
 .container{
     width:100%;
     background-image:url('images/backdrop.jpg');
-    background-attachment: scroll;
+    background-attachment: fixed;
     background-position:center;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
@@ -31,8 +31,6 @@ header{
     -o-background-size: cover;
     background-size: cover;
 
-      filter: blur(8px);
-  -webkit-filter: blur(8px);
    
 
 }
