--- a/CIstyles.css
+++ b/CIstyles.css
@@ -14,5 +14,5 @@ html {
     
     
 }
-.container{width:100%;}
-img{width:100%;display:block;}
+.container{width:100%; margin: 0 auto;}
+img{width:100%;display:block; margin: 0 auto;}
