--- a/CIstyles.css
+++ b/CIstyles.css
@@ -15,4 +15,4 @@ html {
     
 }
 .container{width:100%; margin: 0 auto;}
-img{max-width:100%;max-height:100%;display:block; margin: 0 auto;}
+img{max-width:100%;max-height:100%;display:block; margin: 0 auto;object-fit:contain;}
