--- a/CIstyles.css
+++ b/CIstyles.css
@@ -1,6 +1,7 @@
   
 body {
     min-height: 100%;
+  width:100%;
     margin: 0;
     padding: 0;
     background-color: #ffffff;
@@ -8,6 +9,7 @@ body {
 }
 html {
     height: 100%;
+  width:100%;
     font-size:16px;
     font-family:'Roboto','arial',serif;
     scroll-behavior:smooth;
