--- a/CIstyles.css
+++ b/CIstyles.css
@@ -17,4 +17,4 @@ html {
     
 }
 .container{width:100%; margin: 0 auto;}
-img{max-width:100%;max-height:100%;display:block; margin: 0 auto;object-fit:contain;}
+img{max-width:100%;max-height:100%;display:block; margin: 0 auto;object-fit:contain;margin-top:30px; margin-bottom: 30px;}
