--- a/CIstyles.css
+++ b/CIstyles.css
@@ -16,5 +16,10 @@ html {
     
     
 }
-.container{width:100%; margin: 0 auto;}
-img{max-width:100%;max-height:100%;display:block; margin: 0 auto;object-fit:contain;margin-top:30px; margin-bottom: 30px;}
+.container{width:100%; margin: 0 auto; display:flex; flex-wrap:wrap;}
+
+img{
+  width:100%;
+  max-height:100%;
+  margin: 0px 30px;
+}
