--- a/CIstyles.css
+++ b/CIstyles.css
@@ -16,10 +16,14 @@ html {
     
     
 }
-.container{width:100%; margin: 0 auto; display:flex; flex-wrap:wrap;}
+.container{width:auto; margin: 0 auto; display:flex; flex-wrap:wrap;}
 
 img{
   width:100%;
   max-height:100%;
   margin: 0px 30px;
+}
+
+@media screen only and (min-width:1000px){
+  .container{width:50%;}
 }
