--- a/CIstyles.css
+++ b/CIstyles.css
@@ -1,7 +1,5 @@
-  
 body {
     min-height: 100%;
-  
     margin: 0;
     padding: 0;
     background-color: #fbba00;
@@ -9,21 +7,42 @@ body {
 }
 html {
     height: 100%;
-  
     font-size:16px;
     font-family:'Roboto','arial',serif;
     scroll-behavior:smooth;
     
     
 }
-.container{width:auto; margin: 0 auto; display:flex; flex-wrap:wrap;}
+header{
+    width:100%;
+    text-align:center;
+    background-color:#fbba00;
+    font-size:12px;
+  
+}
+.container{
+    width:100%;
+    background-image:url('images/backdrop.jpg');
+    background-attachment: fixed;
+    background-position:center;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 
-img{
-  width:100%;
-  max-height:100%;
-  margin: 0px 30px;
+   
+
 }
 
-@media screen only and (min-width:1000px){
-  .container{width:50%;}
+img{
+    margin:0 auto;
+    width:100%;
+    max-height:100%;
+    display:block;
+
+}
+@media screen and (min-width:1000px){
+    img{width:50%;}
+    header{width:50%;margin:0 auto;}
 }
