--- a/CIstyles.css
+++ b/CIstyles.css
@@ -22,14 +22,7 @@ header{
 }
 .container{
     width:100%;
-    background-image:url('images/backdrop.jpg');
-    background-attachment: fixed;
-    background-position:center;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background-color:#fbba00;
 
    
 
@@ -40,6 +33,7 @@ img{
     width:100%;
     max-height:100%;
     display:block;
+    margin: 0px 30px;
 
 }
 @media screen and (min-width:1000px){
