--- a/CIstyles.css
+++ b/CIstyles.css
@@ -23,7 +23,13 @@ header{
 .container{
     width:100%;
     background-color:#fbba00;
-
+    background-attachment: fixed;
+    background-position:center;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
    
 
 }
