--- a/CIstyles.css
+++ b/CIstyles.css
@@ -22,7 +22,7 @@ header{
 }
 .container{
     width:100%;
-    background-color:#fbba00;
+    background-image:url('images/backdrop.jpg');
     background-attachment: fixed;
     background-position:center;
     background-repeat: no-repeat;
@@ -30,10 +30,10 @@ header{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
    
 
 }
-
 img{
     margin:0 auto;
     width:100%;
