--- a/CIstyles.css
+++ b/CIstyles.css
@@ -30,6 +30,7 @@ header{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    margin: 0 auto;
 
    
 
