--- a/CIstyles.css
+++ b/CIstyles.css
@@ -40,7 +40,7 @@ img{
     width:100%;
     max-height:100%;
     display:block;
-    margin: 0px 30px;
+    margin-bottom: 30px;
 
 }
 @media screen and (min-width:1000px){
