--- a/CIstyles.css
+++ b/CIstyles.css
@@ -2,7 +2,7 @@ body {
     min-height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #ffffff;
+    background-color: #ffab00;
     font-size:1em;
 }
 html {
@@ -13,38 +13,13 @@ html {
     
     
 }
-header{
-    width:100%;
-    text-align:center;
-    background-color:white;
-    font-size:12px;
-  
-}
-.container{
-    width:100%;
-    background-image:url('images/backdrop.jpg');
-    background-attachment: fixed;
-    background-position:center;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    margin: 0 auto;
-
-   
-
-}
-img{
-    margin:0 auto;
-    width:100%;
-    max-height:100%;
-    display:block;
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
     margin-bottom: 30px;
-
-}
-@media screen and (min-width:1000px){
-    img{width:50%;}
-    header{width:50%;margin:0 auto;}
-}
-p > a > img:hover{opacity:0.5; transition:0.5s}
+  }
+  @media screen and (max-width: 1000px){
+      img{width:100%;}
+  }
