--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html {
     scroll-behavior:smooth;
     
     
+    
 }
 header{
     width:100%;
@@ -21,18 +22,8 @@ header{
   
 }
 .container{
-    width:100%;
-    background-image:url('images/backdrop.jpg');
-    background-attachment: fixed;
-    background-position:center;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-
-   
-
+width:100%;
+z-index:999 !important;
 }
 
 img{
@@ -45,5 +36,112 @@ img{
 @media screen and (min-width:1000px){
     img{width:50%;}
     header{width:50%;margin:0 auto;}
+
+
 }
-p > a > img:hover{opacity:0.5; transition:0.5s}
+@media screen and (max-width:999px){
+    .socials{width:100%;}
+    .socials > img {width:50%;}
+}
+
+.socials{
+    width:50%;
+    display:flex;
+    flex-wrap:wrap;
+    margin:0 auto;
+}
+.socials > img{width:50%;}
+
+* {
+    margin: 0;
+    padding: 0;
+  }
+  body {
+    font: 100% / 1.5 Arial;
+  /*   background: linear-gradient(135deg, #3e028c -50%, #000 100%); */
+    
+    background-image: linear-gradient(135deg, #6297e7 0%, #2364b8 25%, #133f80 50%, #113f6a 75%, #040357 100%);
+  }
+  ::-webkit-scrollbar { 
+      display: none; 
+  }
+  .fixed {
+    position: fixed;
+    color: white;
+    font-weight: 700;
+    text-align: center;
+    width: 100vw;
+    
+    font-size: 24px;
+  }
+  .parallax {
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+    -webkit-perspective: 1px;
+    perspective: 1px;
+  }
+  
+  .parallax__layer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+  
+  .parallax__layer--base {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+  
+  .parallax__layer--back {
+    -webkit-transform: translateZ(-2px) scale(3);
+    transform: translateZ(-2px) scale(3);
+  }
+  .parallax__layer--back2 {
+    -webkit-transform: translateZ(-6px) scale(5);
+    transform: translateZ(-6px) scale(5);
+  }
+  .parallax__layer--back3 {
+    -webkit-transform: translateZ(-12px) scale(6);
+    transform: translateZ(-12px) scale(6);
+  }
+  
+  /* add some padding to force scrollbars */
+  .parallax__layer {
+    padding: 100vh 0;
+  }
+  
+  .starfield > * {
+    background-size: 200px 200px;
+    background-image: radial-gradient(
+        2px 2px at 40px 60px,
+        #ccc,
+        rgba(0, 0, 0, 0)
+      ),
+      radial-gradient(2px 2px at 20px 50px, #ddd, rgba(0, 0, 0, 0)),
+      radial-gradient(2px 2px at 30px 100px, #eee, rgba(0, 0, 0, 0)),
+      radial-gradient(2px 2px at 40px 60px, rgb(0, 255, 0), rgba(0, 0, 0, 0)),
+      radial-gradient(2px 2px at 110px 90px, rgb(255, 255, 255), rgba(0, 0, 0, 0)),
+      radial-gradient(2px 2px at 190px 150px, rgb(255, 200, 0), rgba(0, 0, 0, 0));
+    background-repeat: repeat;
+  }
+  .starfield > * {
+    position: absolute;
+    top: -250%;
+    left: 0;
+    height: 500%;
+    width: 100%;
+  }
+  
+  .starfield span:nth-child(2) {
+    transform: rotate(45deg);
+  }
+  .starfield span:nth-child(3) {
+    transform: rotate(69deg);
+  }
+  .starfield span:nth-child(4) {
+    transform: rotate(123deg);
+  }
+  
